tests/base/invalid/ListSublist_CompileFail_3.whiley
void System::main([string] args):
    list = [1,2,3]
    sublist = list[2..0]
    out->println(str(list))
    out->println(str(sublist))
